--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 			{{ content }}
 			
 			</div><!-- /.container -->
+			{% include header.html %}
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:annemoshyedi@gmail.com">email</a></li>
