--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,10 @@
 	    		</ul>
 			</nav>
 			<div class="container">
-			
+			{% include home.html %}
 			{{ content }}
-			
 			</div><!-- /.container -->
-			{% include header.html %}
+			
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:annemoshyedi@gmail.com">email</a></li>
