--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -2,7 +2,7 @@
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-  background-image: url('..anne-moshyedi.github.io/img/header.JPG');
+  background-image: url('../anne-moshyedi.github.io/img/header.JPG');
   background-position: center center;
   @include background-cover;
   hr {
