--- a/css/creative.css
+++ b/css/creative.css
@@ -169,7 +169,8 @@ img::-moz-selection {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-  background-image: none;
+/*   background-image: none; */
+  background-color: blue;
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
