--- a/css/creative.css
+++ b/css/creative.css
@@ -172,9 +172,9 @@ header.masthead {
 /*   background-image: none; */
   background-color: blue;
   background-position: center center;
-  -webkit-background-size: cover;
+/*   -webkit-background-size: cover;
   -moz-background-size: cover;
-  -o-background-size: cover;
+  -o-background-size: cover; */
   background-size: cover;
 }
 
