--- a/css/creative.css
+++ b/css/creative.css
@@ -167,15 +167,15 @@ img::-moz-selection {
 }
 
 header.masthead {
-  padding-top: 10rem;
+/*   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-/*   background-image: none; */
-  background-color: blue;
+  background-image: none;
   background-position: center center;
-/*   -webkit-background-size: cover;
+  -webkit-background-size: cover;
   -moz-background-size: cover;
-  -o-background-size: cover; */
-  background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; */
+  background-color: #F05F40 !important;
 }
 
 header.masthead hr {
