--- a/css/creative.css
+++ b/css/creative.css
@@ -169,7 +169,11 @@ img::-moz-selection {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-  background-image: url("../img/header.jpg");
+/*  background-image: url("../img/header.jpg");*/
+/*    background-image: none;*/
+/*    background-color: blue;*/
+/*    background: url("../img/header.jpg");*/
+    background: blue;
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
