--- a/css/creative.css
+++ b/css/creative.css
@@ -170,6 +170,7 @@ header.masthead {
    padding-top: 10rem;
    padding-bottom: calc(10rem - 56px);
 /*<<<<<<< HEAD*/
+/*      background-image: url("../img/header.JPG");*/
   background-image: url("../anne-moshyedi.github.io/img/header.JPG");
 /*    background-image: none;
 /*    background-color: blue;*/
