--- a/css/creative.css
+++ b/css/creative.css
@@ -56,7 +56,8 @@ h6 {
 }
 
 .text-faded {
-  color: rgba(255, 255, 255, 0.7);
+/*  color: rgba(255, 255, 255, 0.7);*/
+    color: rgba(240, 95, 64, 0.7);
 }
 
 section {
@@ -261,8 +262,10 @@ header.masthead p {
   height: 100%;
   text-align: center;
   opacity: 0;
-  color: #fff;
-  background: rgba(240, 95, 64, 0.9);
+    color: rgba(240, 95, 64, 0.9);
+/*  color: #fff;*/
+    background: white;
+/*  background: rgba(240, 95, 64, 0.9);*/
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
