--- a/css/creative.css
+++ b/css/creative.css
@@ -30,12 +30,21 @@ a:hover {
 }
 
 div.link:hover{
-    font-weight: bold;
+/*    font-weight: bold;*/
     color: lightblue;
 }
 
 a.sublink:hover{
     color: whitesmoke;
+    font-size: 16px;
+    font-weight: bold;
+    opacity: 1;
+    text-decoration: none;
+}
+
+.sublink{
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 h1,
@@ -247,17 +256,22 @@ header.masthead p {
 /*    border: black 4px solid;*/
 }
 
-.portfolio-box {
+.proj{
+  margin-bottom: 10px;
+}
+
+
+.proj .portfolio-box {
   position: relative;
   display: block;
   max-width: 650px;
   margin: 0 auto;
 }
 
-.portfolio-box .portfolio-box-caption {
+.proj .portfolio-box .portfolio-box-caption {
   position: absolute;
   bottom: 0;
-  display: block;
+/*  display: block;*/
   width: 100%;
   height: 100%;
   text-align: center;
@@ -271,43 +285,45 @@ header.masthead p {
   transition: all 0.2s;
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
+
+
+.proj .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
   position: absolute;
   top: 50%;
   width: 100%;
-  transform: translateY(-50%);
+  transform: translateY(-25%);
   text-align: center;
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
+.proj .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
+.proj .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
   padding: 0 15px;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
+.proj .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
   font-size: 14px;
   font-weight: 600;
   text-transform: uppercase;
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
+.proj .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
   font-size: 18px;
 }
 
-.portfolio-box:hover .portfolio-box-caption {
+.proj .portfolio-box:hover .portfolio-box-caption {
   opacity: 1;
 }
 
-.portfolio-box:focus {
+.proj .portfolio-box:focus {
   outline: none;
 }
 
 @media (min-width: 768px) {
-  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
+  .proj .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
     font-size: 16px;
   }
-  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
+  .proj .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
     font-size: 22px;
   }
 }
