--- a/css/creative.css
+++ b/css/creative.css
@@ -190,7 +190,7 @@ header.masthead {
    padding-bottom: calc(10rem - 56px);
 /*<<<<<<< HEAD*/
 /*      background-image: url("../img/header.JPG");*/
-  background-image: url("../anne-moshyedi.github.io/img/header.JPG");
+  background-image: url("../img/header.JPG");
 /*    background-image: none;
 /*    background-color: blue;*/
 /*    background: url("../anne-moshyedi.github.io/img/header.jpg");*/
